--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>Mark Landscaping Arizona</h1>
             <hr>
-            <p>Economic and Afforablde Landscaping!</p>
+            <p>Economic and Affordable Landscaping!</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
