--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -16,6 +16,7 @@
             <a href="mailto:{{ site.email }}" >
             <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.email }}</p>
+                <p>Phone:<a href="tel:6027057386">602-705-7386</a> </p>
             </a>
         </div>
         <!-- <div class="col-lg-2 col-lg-offset-1 text-center">
