--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,19 +11,26 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <i class="fa fa-4x fa-tree wow bounceIn text-primary"></i>
+                    <h3>Services we provide </h3>
+                    <p class="text-muted">Tree Trimming & Removal </p>
+                    <p class="text-muted">Patios & Pavers </p>
+                    <p class="text-muted">Complete Yard Cleanup </p>
+                    <p class="text-muted">Palm Tree Cleaning & Skinning </p>
+                    <p class="text-muted"> Custom Landscape Design </p>
+                    <p class="text-muted"> Sprinkler & Drip Irrigation Systems </p>
+                    <p class="text-muted"> Leak Repair </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <i class="fa fa-4x fa-usd wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Free quote</h3>
+                    <p class="text-muted">For a Free Consultation and Quote. We’ll get back to you as quickly as we can with a free consultation
+                        and a quote for the services you need! </p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            <!-- <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Up to Date</h3>
@@ -36,7 +43,7 @@
                     <h3>Made with Love</h3>
                     <p class="text-muted">You have to make your websites with love these days!</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
