--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,9 +1,10 @@
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
         <div class="row no-gutter">
+
             <div class="col-lg-6 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/landscaping.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/image7.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -19,7 +20,7 @@
 
             <div class="col-lg-6 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/image3.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/image2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -37,7 +38,7 @@
         <div class="row no-gutter">
             <div class="col-lg-6 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/image2.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/image3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -66,7 +67,41 @@
                     </div>
                 </a>
             </div>
+</div>
+            <div class="row no-gutter">
 
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/image5.jpeg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Work on landscaping
+                            </div>
+                            <div class="project-name">
+                                Landscaping
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/image6.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Work on landscaping
+                            </div>
+                            <div class="project-name">
+                                Landscaping
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+</div>
 
         </div>
     </div>
