--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -4,7 +4,7 @@
 
             <div class="col-lg-6 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/image7.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/image13.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -67,8 +67,8 @@
                     </div>
                 </a>
             </div>
-</div>
-            <div class="row no-gutter">
+        </div>
+        <div class="row no-gutter">
 
             <div class="col-lg-6 col-sm-6">
                 <a href="#" class="portfolio-box">
@@ -101,8 +101,115 @@
                 </a>
             </div>
 
-</div>
+        </div>
+
+        <div class="row no-gutter">
+
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/image8.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Work on pavers
+                            </div>
+                            <div class="project-name">
+                                Pavers
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-lg-6 col-sm-"> 
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/image9.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Work on landscaping
+                            </div>
+                            <div class="project-name">
+                                Landscaping
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
 
         </div>
+
+        <div class="row no-gutter">
+
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/image10.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Work on pavers
+                            </div>
+                            <div class="project-name">
+                                Pavers
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-lg-6 col-sm-6"> 
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/image11.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Work on landscaping
+                            </div>
+                            <div class="project-name">
+                                Landscaping
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <div class="row no-gutter">
+
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/image12.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Work on pavers
+                            </div>
+                            <div class="project-name">
+                                Pavers
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-6 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="img/portfolio/image13.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Work on pavers
+                            </div>
+                            <div class="project-name">
+                                Pavers
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+        </div>
+
+    </div>
     </div>
 </section>
